test/syc/good/add_assign.c
/*
 * Add assign
 */

int a, b;

int add_assign(void)
{
	a += b;
}
