test/syc/bad/incomarg.c
/*
 * Argument has incomplete type
 */

void f(struct foo a)
{
}
